<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size5dp">

    <TextView
        android:id="@+id/tv_TenTruyen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tentruyen"
        android:lines="1"
        android:textSize="@dimen/size24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tacgia"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_TacGia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size15dp"
            android:hint="@string/tvtacgia"
            android:textColor="@color/tvtacgia" />
    </LinearLayout>
    <View
        android:background="@color/button2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size1dp"/>

</LinearLayout>